--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <body>
     <h1>Yiğit Öztanıl</h1><br/>
     <a class="btn" href="/vize/index.html">Vize</a><br/>
-    <a class="btn" href="/final/index.html">Final</a>
+	<a class="btn" href="/final/index.html">Final</a>
+	<br/>
+    <a class="btn" href="https://drive.google.com/file/d/1HQiSARhsbgPvkCQn75xm7U1VOtLxuQ5c/view?usp=sharing">Ödev ve Projeler</a>
 </body>
 </html>
